--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,14 @@
 
 body {
     font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
     background-color: #191A19;
 }
 .mulish-font {
     font-family: "Montserrat", sans-serif !important;
+}
+.bg-header {
+    background-color: #2727279c;
 }
 .bg-black-secondary {
     background-color: #272727;
@@ -26,6 +30,48 @@ body {
 .btn:focus,
 .form-control:focus {
     box-shadow: 0 0px 0px 3px #f5c43c4f;
+}
+.text-kecil {
+    font-size: 13px !important;
+}
+#sosmedSection .row > div > a > div {
+    background-color: rgba(0, 0, 0, 0.384);
+    color: white;
+    padding: 9px 13px 9px 13px;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+#sosmedSection .row > div > a > div:hover {
+    background-color: white;
+    color: black !important;
+    padding: 9px 13px 9px 13px;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+.subTitle {
+    color: white;
+    text-align: center;
+    padding-bottom: 4px;
+}
+.garisTitle {
+    width: 100px;
+    border-bottom: 2px solid white;
+    padding: 0px;
+    margin-top: 4px;
+    margin-bottom: 5px;
+    opacity: 100%;
+}
+.garisTitleMiddle {
+    width: 50px;
+    border-bottom: 6px solid #FB9532;
+    opacity: 100%;
+    position: relative;
+    margin-top: -9px;
+}
+
+#project-section .card {
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 @media (max-width: 768px) {
