--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,8 +175,8 @@ margin: 0 !important;
     position: relative;
     margin-left: -24px;
     margin-right: -24px;
-    border-bottom: 4px  #191A19;
-    opacity: 100%;
+    border-bottom: 2px solid #191A19;
+    opacity: 100% ;
     
 }
 
